--- a/css chapter no 3.html
+++ b/css chapter no 3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> my 3rd css program </title>
+    <title> height,width,border </title>
     <style>
     *{
         margin: 0;
