--- a/css chapter no 4.html
+++ b/css chapter no 4.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fonts,displays</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        .box1{
+            width:1243px;
+            height: 132px;
+            background-color: red; 
+        }
+        .box2{
+            width:1243px;
+            height: 132px;
+            background-color: blue;
+        }
+    </style>
+
 </head>
 <body>
+    <div class="box1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Architecto, porro sed. Ipsam voluptatem ad odit rem enim deleniti perspiciatis quam! Fugiat,
+         error cumque libero fuga velit maiores facilis, atque, mollitia similique vel repudiandae omnis.
+    </div>
+    <div class="box2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Architecto, porro sed. Ipsam voluptatem ad odit rem enim deleniti perspiciatis quam! Fugiat,
+         error cumque libero fuga velit maiores facilis, atque, mollitia similique vel repudiandae omnis.
+    </div>
     
 </body>
 </html>
