--- a/css chapter no 4.html
+++ b/css chapter no 4.html
@@ -18,6 +18,7 @@
             width:1243px;
             height: 132px;
             background-color: blue;
+            display: inline;
         }
     </style>
 
