--- a/css chaper no 5.html
+++ b/css chaper no 5.html
@@ -1,33 +1,38 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> size,position & lists </title>
+    <title>fornt sizes </title>
     <style>
-        .container{
-            font-size: 20px;
+        *{
+            margin: 5px;
+            padding: 3px;
         }
-        .box{
-            font-size: 1rem;
+        li{
+            display:inline;
+            font-size: 3vw;
+            padding:  13px;
+            position: relative;
         }
-
-
+        header{
+            background-color: black;
+            color:white;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <p> this is my paragraph </p>
-    </div>
-    <div class="box">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-        Excepturi inventore illo praesentium iure consectetur numquam 
-        corporis libero soluta, placeat maxime, doloribus, fugit 
-        necessitatibus blanditiis fugiat porro cumque ipsum tempore 
-        dolorem?
+    <nav>
+        <header>
+            <ul>
+                <li>Apple</li>
+                <li>Banana</li>
+                <li>orange</li>
+            </ul>
 
-    </div>
-
+        </header>
+    </nav> 
     
 </body>
 </html>
