--- a/css chapter no 5.html
+++ b/css chapter no 5.html
@@ -7,8 +7,8 @@
     <title>fornt sizes </title>
     <style>
         *{
-            margin: 5px;
-            padding: 3px;
+            margin: 0;
+            padding: 0;
         }
         li{
             display:inline;
